tests/negative/syntax/unfinished-string/test.smol
package testing;

class Test {
	static main() Unit {
		var x String = "foo\
		n";
	}
}
